File class added. Save and Dowload methods added and Some classes & methods fixed

--- a/Hospital/Hospital.csproj
+++ b/Hospital/Hospital.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Department.cs" />
     <Compile Include="Doctor.cs" />
+    <Compile Include="File.cs" />
     <Compile Include="Hospital.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
